--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "edutrace-bridge",
+  "name": "agritrace-docs",
   "version": "1.0.0",
-  "description": "Blockchain-based education verification system",
+  "description": "Agricultural Product Traceability Platform Documentation",
   "scripts": {
     "start": "docusaurus start",
     "build": "docusaurus build",
@@ -11,33 +11,22 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc",
-    "typechain": "npx typechain --target=ethers-v5 \"artifacts/contracts/**/*.json\"",
-    "postinstall": "npx typechain --target=ethers-v5 \"artifacts/contracts/**/*.json\""
+    "typecheck": "tsc"
   },
   "dependencies": {
     "@docusaurus/core": "3.1.1",
     "@docusaurus/preset-classic": "3.1.1",
     "@mdx-js/react": "^3.0.0",
-    "@openzeppelin/contracts": "^4.9.0",
     "clsx": "^2.0.0",
-    "ethers": "^6.0.0",
-    "hardhat": "^2.19.0",
-    "ipfs-http-client": "^60.0.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "web3": "^4.0.0"
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.1.1",
     "@docusaurus/tsconfig": "3.1.1",
     "@docusaurus/types": "3.1.1",
-    "@nomiclabs/hardhat-ethers": "^2.0.0",
-    "@nomiclabs/hardhat-waffle": "^2.0.0",
     "@types/react": "^18.2.29",
-    "chai": "^4.3.0",
-    "ethereum-waffle": "^4.0.0",
     "gh-pages": "^6.3.0",
     "typescript": "~5.2.2"
   },
