fix: update deployment workflow with proper permissions and add simple workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,4 +54,5 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./build
-        cname: docs.agritrace.vn 
+        cname: docs.agritrace.vn
+        force_orphan: true 
